Navegação entre paginas

--- a/paginas/sub_01/sub_pag_1_2.html
+++ b/paginas/sub_01/sub_pag_1_2.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Sub página 01 seção 02</h1>
     <a href="../pagina01.html">Página 01</a>
+    <a name="secao01">Secao</a>
 </body>
 </html>
