--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <title>Página inicial</title>
 </head>
 <body>
-   <h1>Sumário</h1>
-   <h5><a href="paginas/pagina01.html">Página 01</a></h5>
-   <h5><a href="paginas/sub_01/sub_pag_1_1.html">Sub página 01 seção 01</a></h5>
-   <h5><a href="paginas/sub_01/sub_pag_1_2.html">Sub página 01 seção 02</a></h5>
-   <h5><a href="paginas/pagina02.html">Página 02</a></h5>
-   <h5><a href="paginas/sub_02/sub_pag_2_1.html">Sub página 02 seção 01</a></h5>
-   <h5><a href="paginas/sub_02/sub_pag_2_2.html">Sub página 02 seção 02</a></h5>
+    <h1>Sumário</h1>
+        <ul><li>Teste</li>
+            <ul>
+                <li><a href="paginas/pagina01.html">Página 01</a>
+                    <ol> 
+                        <li><a href="paginas/sub_01/sub_pag_1_1.html">Sub página 01 seção 01</a></li>
+                        <li><a href="paginas/sub_01/sub_pag_1_2.html#secao01">Sub página 01 seção 02</a></li>
+                    </ol>
+                </li>
+            
+                <li><a href="paginas/pagina02.html">Página 02</a>
+                    <ol>   
+                        <li><a href="paginas/sub_02/sub_pag_2_1.html">Sub página 02 seção 01</a></li>
+                        <li><a href="paginas/sub_02/sub_pag_2_2.html">Sub página 02 seção 02</a></li>
+                    </ol> 
+                </li>
+            </ul> 
+        </ul>
+</body>         
 </html>
+
